--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,10 @@
  @import url('https://fonts.googleapis.com/css2?family=Lemon&display=swap');
  
  :root {
-     --laranja-claro: #FF862A;
+     --laranja-claro: #f0e089;
      --alto-contraste-fundo: #000000;
      --alto-contraste-texto: #ffffff;
-     --alto-contraste-link: #ffd700;
+     --alto-contraste-link: #cc9db7;
  }
  
  body {
@@ -24,7 +24,7 @@
  
  
  .nav-link {
-     color: #CB6D43;
+     color: #c29a88;
      font-weight: 600;
  }
  
